Transfomer as a script

--- a/seq2seq/torch_transformer_stat_quest.ipynb
+++ b/seq2seq/torch_transformer_stat_quest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "ef3d8279",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "f31118f7",
    "metadata": {},
    "outputs": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "b03f2d11",
    "metadata": {},
    "outputs": [],
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "id": "fc2fcb05",
    "metadata": {},
    "outputs": [
@@ -127,7 +127,7 @@
        "(tensor([0, 1, 2, 4, 3]), tensor([1, 2, 4, 3, 4]))"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "id": "13cc048d",
    "metadata": {},
    "outputs": [],
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "id": "a0eb55ad",
    "metadata": {},
    "outputs": [],
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 7,
    "id": "1235aafa",
    "metadata": {},
    "outputs": [],
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 8,
    "id": "193ba39b",
    "metadata": {},
    "outputs": [
@@ -655,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "id": "9fba7764",
    "metadata": {},
    "outputs": [
@@ -667,6 +667,7 @@
       "GPU available: False, used: False\n",
       "TPU available: False, using: 0 TPU cores\n",
       "HPU available: False, using: 0 HPUs\n",
+      "c:\\Users\\Schiendorfer\\Anaconda3\\envs\\llm\\Lib\\site-packages\\lightning\\pytorch\\trainer\\connectors\\logger_connector\\logger_connector.py:76: Starting from v1.9.0, `tensorboardX` has been removed as a dependency of the `lightning.pytorch` package, due to potential conflicts with other packages in the ML ecosystem. For this reason, `logger=True` will use `CSVLogger` as the default logger, unless the `tensorboard` or `tensorboardX` packages are found. Please `pip install lightning[extra]` or one of them to enable TensorBoard support by default\n",
       "\n",
       "  | Name           | Type             | Params | Mode \n",
       "------------------------------------------------------------\n",
@@ -690,7 +691,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 29: 100%|██████████| 2/2 [00:00<00:00, 76.91it/s, v_num=0] "
+      "Epoch 29: 100%|██████████| 2/2 [00:00<00:00, 61.44it/s, v_num=1] "
      ]
     },
     {
@@ -704,7 +705,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 29: 100%|██████████| 2/2 [00:00<00:00, 47.62it/s, v_num=0]\n"
+      "Epoch 29: 100%|██████████| 2/2 [00:00<00:00, 40.37it/s, v_num=1]\n"
      ]
     }
    ],
@@ -715,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 10,
    "id": "fdac1eff",
    "metadata": {},
    "outputs": [
@@ -725,9 +726,8 @@
      "text": [
       "Predicted Tokens:\n",
       "\n",
-      "\t statquest\n",
       "\t awesome\n",
-      "\t what\n"
+      "\t <EOS>\n"
      ]
     }
    ],
@@ -759,7 +759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "id": "5ad94321",
    "metadata": {},
    "outputs": [
