--- a/seq2seq/transformer_colab.ipynb
+++ b/seq2seq/transformer_colab.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "26a64cd7",
    "metadata": {},
    "outputs": [],
@@ -93,7 +93,75 @@
    "execution_count": null,
    "id": "ab473cff",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Seed set to 43\n",
+      "Using default `ModelCheckpoint`. Consider installing `litmodels` package to enable `LitModelCheckpoint` for automatic upload to the Lightning model registry.\n",
+      "GPU available: False, used: False\n",
+      "TPU available: False, using: 0 TPU cores\n",
+      "HPU available: False, using: 0 HPUs\n",
+      "c:\\Users\\Schiendorfer\\Anaconda3\\envs\\llm\\Lib\\site-packages\\lightning\\pytorch\\trainer\\connectors\\logger_connector\\logger_connector.py:76: Starting from v1.9.0, `tensorboardX` has been removed as a dependency of the `lightning.pytorch` package, due to potential conflicts with other packages in the ML ecosystem. For this reason, `logger=True` will use `CSVLogger` as the default logger, unless the `tensorboard` or `tensorboardX` packages are found. Please `pip install lightning[extra]` or one of them to enable TensorBoard support by default\n",
+      "\n",
+      "  | Name                | Type             | Params | Mode \n",
+      "-----------------------------------------------------------------\n",
+      "0 | we                  | Embedding        | 10     | train\n",
+      "1 | pe                  | PositionEncoding | 0      | train\n",
+      "2 | self_attention      | Attention        | 18     | train\n",
+      "3 | fc_change_direction | Linear           | 6      | train\n",
+      "4 | fc_output           | Linear           | 15     | train\n",
+      "5 | loss                | CrossEntropyLoss | 0      | train\n",
+      "-----------------------------------------------------------------\n",
+      "49        Trainable params\n",
+      "0         Non-trainable params\n",
+      "49        Total params\n",
+      "0.000     Total estimated model params size (MB)\n",
+      "9         Modules in train mode\n",
+      "0         Modules in eval mode\n",
+      "c:\\Users\\Schiendorfer\\Anaconda3\\envs\\llm\\Lib\\site-packages\\lightning\\pytorch\\trainer\\connectors\\data_connector.py:425: The 'train_dataloader' does not have many workers which may be a bottleneck. Consider increasing the value of the `num_workers` argument` to `num_workers=7` in the `DataLoader` to improve performance.\n",
+      "c:\\Users\\Schiendorfer\\Anaconda3\\envs\\llm\\Lib\\site-packages\\lightning\\pytorch\\loops\\fit_loop.py:310: The number of training batches (2) is smaller than the logging interval Trainer(log_every_n_steps=50). Set a lower value for log_every_n_steps if you want to see logs for the training epoch.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*** BEFORE TRAINING ***\n",
+      ">>>  what is DL <EOS>\n",
+      "Predicted Tokens:\n",
+      "\n",
+      "tensor([2, 1, 4])\n",
+      "\t DL\n",
+      "\t is\n",
+      "\t <EOS>\n",
+      "*** RUNNING TRAINING ***\n",
+      "Epoch 29: 100%|██████████| 2/2 [00:00<00:00, 135.84it/s, v_num=2]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "`Trainer.fit` stopped: `max_epochs=30` reached.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 29: 100%|██████████| 2/2 [00:00<00:00, 101.40it/s, v_num=2]\n",
+      "*** AFTER TRAINING ***\n",
+      ">>>  what is DL <EOS>\n",
+      "Predicted Tokens:\n",
+      "\n",
+      "tensor([3, 4])\n",
+      "\t awesome\n",
+      "\t <EOS>\n"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "import torch.nn as nn \n",
@@ -101,8 +169,8 @@
     "\n",
     "from torch.optim import Adam\n",
     "from torch.utils.data import TensorDataset, DataLoader\n",
-    "from transformer_classes import DecoderOnlyTransformer\n",
     "\n",
+    "!pip install lightning\n",
     "import lightning as L\n",
     "\n",
     "# inspired by https://github.com/StatQuest/decoder_transformer_from_scratch\n",
