--- a/seq2seq/transformer_colab.ipynb
+++ b/seq2seq/transformer_colab.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "26a64cd7",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
     "\n",
     "from torch.optim import Adam\n",
     "from torch.utils.data import TensorDataset, DataLoader\n",
-    "\n",
+    "!pip install lightning\n",
     "import lightning as L\n",
     "\n",
     "class PositionEncoding(nn.Module):\n",
